...
                .build()

            val signInClient = GoogleSignIn.getClient(context, gso)
            viewModel.setAdminRequested(adminRequested)
            launcher.launch(signInClient.signInIntent)
        },
        modifier = Modifier.fillMaxWidth().testTag("login_button"),
        colors = ButtonDefaults.buttonColors(
            containerColor = MaterialTheme.colorScheme.primary,
            contentColor = MaterialTheme.colorScheme.onPrimary
        ),
    ) {
        Text(text = "Sign in with Google")
...
